syntax = "proto3";

option go_package = "./storage";

message TableLayoutMetadata {
    int64 NextIID = 1;
    repeated int64 IIDs = 2;
}
